feat: Fix favicon implementation and build configuration
- Updated HTML with proper favicon links and meta tags
- Fixed Vite config to copy favicon files to dist folder
- Added web manifest for PWA support
- Resolved favicon display issues in Google search results

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     
     <!-- Favicon - Multiple formats for best compatibility -->
-    <link rel="icon" href="/A1_favicon.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="/A1_favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" sizes="180x180" href="/A1_favicon.svg">
-    <meta name="theme-color" content="#f59e0b">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#D97706">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A1 Furniture Polish - Best Furniture Polish Services In Mumbai</title>
