--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       a{color:inherit;text-decoration:inherit}
       button,input,select,textarea{font-family:inherit;font-size:100%;font-weight:inherit;line-height:inherit;color:inherit;margin:0;padding:0}
       button{background-color:transparent;background-image:none;cursor:pointer}
-      img,svg,video{display:block;vertical-align:middle;max-width:100%;height:auto}
+      img,svg,video{display:block;max-width:100%;height:auto}
       #root{min-height:100vh}
       /* Critical layout utilities */
       .bg-white{background-color:#fff}
